test_programs/compile_failure/noirc_frontend_tests_metaprogramming_macro_result_type_mismatch/src/main.nr

        fn main() {
            comptime {
                let x = unquote!(quote { "test" });
                let _: Field = x;
            }
        }

        comptime fn unquote(q: Quoted) -> Quoted {
            q
        }
    